--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <img src="dist/img/profile.png" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="https://github.com/TunahanTuna" target="_blank" class="d-block">Mustafa Tunahan Tuna</a>
+                        <a href="https://github.com/TunahanTuna/InsanBilgisayarEtkilesimiOdev" target="_blank" class="d-block">Mustafa Tunahan Tuna</a>
                     </div>
                 </div>
 
@@ -536,7 +536,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <footer class="main-footer">
             <!-- To the right -->
             <!-- Default to the left -->
-            <strong>Copyright &copy; 2021 <a href="https://github.com/TunahanTuna">||181213063 || Mustafa Tunahan TUNA||</a></strong> Tüm hakları saklıdır.
+            <strong>Copyright &copy; 2021 <a href="https://github.com/TunahanTuna/InsanBilgisayarEtkilesimiOdev">||181213063 || Mustafa Tunahan TUNA||</a></strong> Tüm hakları saklıdır.
         </footer>
     </div>
     <!-- ./wrapper -->
